Improve login system
* Highlight moders' names
* Add ability to insert raw HTML into name field for admins

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,3 +6,5 @@
 * Implement post/thread deletion
 [done] Implement search
 [done] Use plugins for routes
+[done] Highlight moders' names
+[done] Add ability to insert raw HTML into name field for admins
