--- a/TODO.txt
+++ b/TODO.txt
@@ -9,3 +9,4 @@
 [done] Highlight moders' names
 [done] Add ability to insert raw HTML into name field for admins
 [done] Fix hashpasses
+[done] Add ability to delete posts from the command line
