Check for unbanned users periodically

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 * Add ability to post files of different types
 * Add ability to hide posts/threads
-* Check for unbanned users periodically
+[done] Check for unbanned users periodically
 [done] Add ability for admins to delete any posts
 [done] Implement thread archiving
 [done] Fix database connection cleanup
