--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@
 * Add ability to ban users from the web
 * Add ability to hide posts/threads
 * Add ability to customize captcha
+[done] Add news block to the home page
