--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,5 @@
 * Add ability to customize captcha
 [done] Add news block to the home page
 [done] Optimise Transaction wrapper class
+[done] Add ability to customize default user name (Anonymous)
+[done] Add a hidden board
