--- a/TODO.txt
+++ b/TODO.txt
@@ -7,3 +7,4 @@
 [done] Add ability to customize default user name (Anonymous)
 [done] Add a hidden board
 [done] Add ability to disable city name guessing
+[done] Fix external link markup
