Implement captcha quota

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
 * Add ability to post files of different types
-* Implement captcha quota
 [done] Add news block to the home page
 [done] Optimise Transaction wrapper class
 [done] Add ability to customize default user name (Anonymous)
@@ -10,3 +9,4 @@
 [done] Add ability to hide posts/threads
 [done] Add ability to customize captcha
 [done] Add code captcha to /pr/
+[done] Implement captcha quota
