--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-* Add ability to post files of different types
+[done] Add ability to post files of different types
 [done] Add news block to the home page
 [done] Optimise Transaction wrapper class
 [done] Add ability to customize default user name (Anonymous)
