Add ability to view linked posts by hovering

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@
 [done] Cache post file infos
 [done] Add ability to edit posts
 [done] Check ban for AJAX requests
+[done] Add ability to view linked posts by hovering
