--- a/TODO.txt
+++ b/TODO.txt
@@ -4,5 +4,6 @@
 [done] Fix page title of threads without subject
 [done] Reload only edited post when editing
 [done] Move Controller::toController function to BAbstractBoard
-* Make tags like [c++]..code...[/c++] work
+[done] Make tags like [c++]..code...[/c++] work
 [done] Don't reload page when deleting a post
+* Create valid op-posts when loading with AJAX
