Implement auto thread update

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,3 +6,4 @@
 [done] Fix Tools::readJsonValue function
 [done] Add [sub] and [sup] tags support (subscript and superscript)
 [done] Add ability to set maximum last posts displayed per thread
+[done] Implement auto thread update
