Implement WebM thumbnailing

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,3 +7,4 @@
 [done] Add [sub] and [sup] tags support (subscript and superscript)
 [done] Add ability to set maximum last posts displayed per thread
 [done] Implement auto thread update
+[done] Implement WebM thumbnailing
