Implement uploaded files previews

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,4 @@
 [done] Improve post editing
 [done] Implement complain button
 [done] Add ability to skipp logging for specified IPs
+[done] Implement uploaded files previews
