--- a/TODO.txt
+++ b/TODO.txt
@@ -7,3 +7,4 @@
 [done] Implement uploaded files previews
 [done] Implement post map ("answers" block)
 [done] Enable [code] tag on all boards
+[done] Add ability for admins to post raw HTML
