--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,8 @@
 [done] Implement movable images
 [done] Improve file info storage
-[done] Fix image scaling
 [done] Improve post editing
 [done] Implement complain button
-[done] Add ability to skipp logging for specified IPs
+[done] Add ability to skip logging for specified IPs
 [done] Implement uploaded files previews
 [done] Implement post map ("answers" block)
 [done] Enable [code] tag on all boards
