--- a/TODO.txt
+++ b/TODO.txt
@@ -11,3 +11,12 @@
 [done] Implement image source search buttons
 [done] Merge CSS
 [done] Add ability to switch styles
+* Implement pre-moderation
+* Implement proxy blocking
+[done] Implement real IP behind proxy detection
+* Implement file deduplication
+* Make HTML compatible with Dollchan Extension Tools
+* Implement favicon blinking on new posts
+[done] Add ability to save all images from thread to disk
+* Improve JS code style
+* Fix post preview button displaying
