--- a/TODO.txt
+++ b/TODO.txt
@@ -16,7 +16,7 @@
 [done] Implement real IP behind proxy detection
 * Implement file deduplication
 * Make HTML compatible with Dollchan Extension Tools
-* Implement favicon blinking on new posts
+[done] Implement favicon blinking on new posts
 [done] Add ability to save all images from thread to disk
 * Improve JS code style
-* Fix post preview button displaying
+* Fix post preview buttons displaying
