--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,6 @@
 [done] Render news/rules as HTML
 [done] Add markup description page
 [done] Rerender posts with references when referenced post is deleted
+[done] Improve logging
 * Implement proxy blocking
 * Make HTML compatible with Dollchan Extension Tools
-* Improve logging
