--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 * Store files in database
-* Check file suffixes when saving
+[done] Check file suffixes when saving files
 [done] Store additional post data as QByteArray (read as QVariant)
 [done] Store post references in a separate table
 * Display post modification time
