--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-* Store files in database
+* Store file infos in database
 [done] Check file suffixes when saving files
 [done] Store additional post data as QByteArray (read as QVariant)
 [done] Store post references in a separate table
