--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@
 [done] Check file suffixes when saving files
 [done] Store additional post data as QByteArray (read as QVariant)
 [done] Store post references in a separate table
+[done] Check captcha outside transaction
 * Display post modification time
 * Use ranges for IP addresses
 * Implement proxy blocking
