--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,9 @@
 [done] Check file suffixes when saving files
 [done] Store additional post data as QByteArray (read as QVariant)
 [done] Store post references in a separate table
-[done] Check captcha outside transaction
+[done] Check captcha outside database transaction
+[done] Delete temporary files if transaction fails
+* Save files outside database transaction
 * Display post modification time
 * Use ranges for IP addresses
 * Implement proxy blocking
