Save files outside database transaction

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@
 [done] Store post references in a separate table
 [done] Check captcha outside database transaction
 [done] Delete temporary files if transaction fails
-* Save files outside database transaction
+[done] Save files outside database transaction
 * Display post modification time
 * Use ranges for IP addresses
 * Implement proxy blocking
