--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,7 @@
 [done] Delete temporary files if transaction fails
 [done] Save files outside database transaction
 [done] Delete files outside transaction
+[done] Use ranges for IP addresses
 * Display post modification time
-* Use ranges for IP addresses
 * Implement proxy blocking
 * Make HTML compatible with Dollchan Extension Tools
