Save captcha quota state

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,5 +4,6 @@
 [done] Implement audio files support
 [done] Add different logos/icons for every file type
 [done] Add ability to cancel thread files download
+[done] Save captcha quota state
 * Implement proxy blocking
 * Make HTML compatible with Dollchan Extension Tools
