--- a/TODO.txt
+++ b/TODO.txt
@@ -4,10 +4,10 @@
 [done] Refactor JS
 [done] Replace alerts with popups
 [done] Fix post preview
+[done] Add ability to delete
 * Add ability to set limits for each thread
 * Implement RPG board
-* Add ability to delete/change/add files
-* Update edited posts when updating thread
+* Add ability to change/add files
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
 * Make HTML compatible with Dollchan Extension Tools
