--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,8 @@
 [done] Refactor JS
 [done] Replace alerts with popups
 [done] Fix post preview
-[done] Add ability to delete
+[done] Add ability to delete files
+[done] Add ability to edit /echo/ board thread links
 * Add ability to set limits for each thread
 * Implement RPG board
 * Add ability to change/add files
