--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@
 [done] Remove some board classes
 [done] Fix post reference creation when using AJAX
 [done] Refactor JS
+[done] Improve templates flexibility
 [done] Replace alerts with popups
 [done] Fix post preview
 [done] Add ability to delete files
@@ -9,6 +10,7 @@
 [done] Implement /rpg/ board
 * Add ability to set limits for each thread
 * Add ability to change/add files
+* Add ability to make boards where images are restricted
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
 * Make HTML compatible with Dollchan Extension Tools
