--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,7 @@
 [done] Add AJAX requests for retrieving boards and thread numbers
 [done] Fix post text processing to avoid transaction timeout
 [done] Implement settings dialog
+[done] Download two thread files simultaneously to minimize ping delay effect
 * Implement quick reply
 * Add ability to select captcha
 * Add ability to set limits for each thread
