--- a/TODO.txt
+++ b/TODO.txt
@@ -12,6 +12,7 @@
 [done] Fix audio/video files playing for posts received with AJAX
 [done] Fix dimension displaying for non-image files
 [done] Fix posting error displaying
+* Post with XHR, get rid of iframe hack
 * Add ability to set limits for each thread
 * Add ability to change/add files
 * Reload codecha instead of reloading a page
