--- a/TODO.txt
+++ b/TODO.txt
@@ -15,6 +15,7 @@
 [done] Post with XHR, get rid of iframe hack
 [done] Implement ability to add new files to existing posts
 [done] Improve home page
+[done] Add /d/ board
 * Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
