Implement post counting system

--- a/TODO.txt
+++ b/TODO.txt
@@ -16,6 +16,7 @@
 [done] Implement ability to add new files to existing posts
 [done] Improve home page
 [done] Add /d/ board
+[done] Implement post counting system
 * Add ability to set limits for each thread
 * Reload codecha instead of reloading a page
 * Implement proxy blocking
